# feed-to-image

plugins/softer_world/: README.md  __main__.py  pyproject.toml  requirements.txt  run.py
plugins/softer_world/app/: __init__.py  config.py
plugins/softer_world/app/api/: __init__.py  comics.py  health.py  weather.py
plugins/softer_world/app/core/: comic_service.py  weather_service.py
plugins/softer_world/app/utils/: comic_generator.py  generator_utils.py  weather_generator.py  weather_openapi_generator.py
